# examples/workers/build/swagger.json
@@ -114,7 +114,7 @@
 		}
 	},
 	"info": {
-		"title": "tsoa-jsdom-workers-example",
+		"title": "tsoa-workers-example",
 		"version": "1.0.0",
 		"license": {
 			"name": "ISC"
@@ -123,6 +123,46 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
+		"/auth/login": {
+			"post": {
+				"operationId": "Login",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"auth"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"multipart/form-data": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"email": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"email"
+								]
+							}
+						}
+					}
+				}
+			}
+		},
 		"/me": {
 			"get": {
 				"operationId": "GetUser",
@@ -148,7 +188,16 @@
 						]
 					}
 				],
-				"parameters": []
+				"parameters": [
+					{
+						"in": "header",
+						"name": "x-test",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/users/{userId}": {
